--- a/Robot.Simulator.Tests/Robot.Simulator.Tests.csproj
+++ b/Robot.Simulator.Tests/Robot.Simulator.Tests.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StrategyTests.cs" />
     <Compile Include="ToyRobotTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerTests.cs" />
